--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,13 +7,21 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".rhestr"
+        <activity android:name=".launcher"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="net.networksaremadeofstring.rhybudd.Settings"
+			android:label="@string/app_name">
+		</activity>
+		
+		<activity android:name="net.networksaremadeofstring.rhybudd.rhestr"
+			android:label="@string/app_name">
+		</activity>
 
     </application>
 </manifest>
