--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 		</activity>
 		
 		<activity android:name="net.networksaremadeofstring.rhybudd.rhestr"
-			android:label="@string/app_name">
+			android:label="Rhybudd - Zenoss Events List">
 		</activity>
 
     </application>
