--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:allowClearUserData="true" android:debuggable="false" android:description="@string/Description">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description" android:debuggable="true">
         <activity android:name=".launcher"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
