--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,10 @@
 		<activity android:name="net.networksaremadeofstring.rhybudd.DeviceList"
 			android:label="Rhybudd - Infrastructure List">
 		</activity>
+		
+		<activity android:name="net.networksaremadeofstring.rhybudd.RhestrPagerDuty"
+			android:label="Rhybudd - PagerDuty Incidents">
+		</activity>
 
     </application>
 </manifest>
