--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,11 @@
 			android:label="Rhybudd - Infrastructure List">
 		</activity>
 		
+		<activity android:name="net.networksaremadeofstring.rhybudd.ViewZenossDevice"
+			android:label="Rhybudd - Device Details"
+			android:theme="@android:style/Theme.NoTitleBar">
+		</activity>
+		
 		<activity android:name="net.networksaremadeofstring.rhybudd.RhestrPagerDuty"
 			android:label="Rhybudd - PagerDuty Incidents">
 		</activity>
