--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.networksaremadeofstring.rhybudd"
-      android:installLocation="auto" android:versionName="1.7" android:versionCode="6">
+      android:installLocation="auto" android:versionName="2.1" android:versionCode="7">
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
@@ -24,6 +24,12 @@
 		
 		<activity android:name="net.networksaremadeofstring.rhybudd.rhestr"
 			android:label="Rhybudd - Zenoss Events List">
+			<intent-filter>
+			     <action android:name="android.intent.action.VIEW" />
+			     <category android:name="android.intent.category.DEFAULT" />
+			     <category android:name="android.intent.category.BROWSABLE" />
+			     <data android:scheme="http" android:path="*/zport/dmd/Events/evconsole*" />
+			 </intent-filter>
 		</activity>
 		
 		<activity android:name="net.networksaremadeofstring.rhybudd.RhybuddHome"
@@ -43,6 +49,12 @@
 		<activity android:name="net.networksaremadeofstring.rhybudd.ViewZenossDevice"
 			android:label="Rhybudd - Device Details"
 			android:theme="@android:style/Theme.NoTitleBar">
+			<intent-filter>
+			     <action android:name="android.intent.action.VIEW" />
+			     <category android:name="android.intent.category.DEFAULT" />
+			     <category android:name="android.intent.category.BROWSABLE" />
+			     <data android:scheme="http" android:path="*/zport/dmd/Devices/*" />
+			 </intent-filter>
 		</activity>
 		
 		<activity android:name="net.networksaremadeofstring.rhybudd.RhestrPagerDuty"
