--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.networksaremadeofstring.rhybudd"
-      android:installLocation="auto" android:versionName="2.1" android:versionCode="7">
+      android:installLocation="auto" android:versionCode="7" android:versionName="2.0">
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
@@ -13,17 +13,16 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                
+		        <category android:name="android.intent.category.CAR_DOCK" /> 
+		        <category android:name="android.intent.category.DESK_DOCK" />
+		        <category android:name="android.intent.category.DEFAULT" /> 
             </intent-filter>
         </activity>
         
         <activity android:name="net.networksaremadeofstring.rhybudd.RhybuddDock"
                   android:label="Rhybudd Dock"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-            <intent-filter>
-                <category android:name="android.intent.category.DESK_DOCK" />
-                <category android:name="android.intent.category.HE_DESK_DOCK" />
-                <category android:name="android.intent.category.LE_DESK_DOCK" />
-            </intent-filter>
         </activity>
         
         <service android:name=".ZenossPoller" />
