--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.networksaremadeofstring.rhybudd"
-      android:installLocation="auto" android:versionCode="9" android:versionName="2.2">
-    <uses-sdk android:minSdkVersion="8" />
+      android:installLocation="auto" android:versionCode="10" android:versionName="2.4">
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="15"/>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description" android:debuggable="false">
-        <activity android:name=".launcher"
+    <application android:theme="@style/rhybudd_default" android:icon="@drawable/icon" android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description" android:debuggable="false">
+        <activity android:name=".RhybuddHome"
                   android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
+                  android:uiOptions="splitActionBarWhenNarrow"
+                  uiOptions="splitActionBarWhenNarrow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-                
-		        <category android:name="android.intent.category.CAR_DOCK" /> 
-		        <category android:name="android.intent.category.DESK_DOCK" />
-		        <category android:name="android.intent.category.DEFAULT" /> 
             </intent-filter>
         </activity>
         
         <activity android:name="net.networksaremadeofstring.rhybudd.RhybuddDock"
                   android:label="Rhybudd Dock"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            <intent-filter>
+                <category android:name="android.intent.category.CAR_DOCK" /> 
+		        <category android:name="android.intent.category.DESK_DOCK" />
+		        <category android:name="android.intent.category.DEFAULT" /> 
+            </intent-filter>
         </activity>
         
         <service android:name=".ZenossPoller" />
         
         <activity android:name=".RhybuddSettings"
+			android:label="@string/app_name">
+		</activity>
+		
+        <activity android:name=".RhybuddInitialSettings"
 			android:label="@string/app_name">
 		</activity>
 		
@@ -41,10 +47,10 @@
 			 </intent-filter>
 		</activity>
 		
-		<activity android:name="net.networksaremadeofstring.rhybudd.RhybuddHome"
+		<!-- <activity android:name="net.networksaremadeofstring.rhybudd.RhybuddHome"
 			android:label="Rhybudd - Launcher">
 			<meta-data android:name="android.app.default_searchable" android:value="net.networksaremadeofstring.rhybudd.Search" />
-		</activity>
+		</activity> -->
 		
 		<activity android:name="net.networksaremadeofstring.rhybudd.ViewZenossEvent"
 			android:label="Rhybudd - Event Details"
@@ -71,22 +77,18 @@
 			 </intent-filter>
 		</activity>
 		
-		<activity android:name="net.networksaremadeofstring.rhybudd.RhestrPagerDuty"
-			android:label="Rhybudd - PagerDuty Incidents">
-		</activity>
-		
 		<activity android:name="net.networksaremadeofstring.rhybudd.Search"
 			android:label="Rhybudd - Search">
 		</activity>
 
-		<activity android:name="Search" android:label="Search" android:theme="@android:style/Theme.NoTitleBar">
+		<!-- <activity android:name="Search" android:label="Search" android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
                 <action android:name="android.intent.action.SEARCH_LONG_PRESS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
-        </activity>
+        </activity> -->
         
 		<receiver android:name="net.networksaremadeofstring.rhybudd.ZenossWidget" 
 			android:label="Rhybudd - Current Event Count">
