--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,10 @@
 			android:label="@string/app_name">
 		</activity>
 		
+        <activity android:name=".SettingsFragment"
+			android:label="@string/app_name">
+		</activity>
+		
         <activity android:name=".RhybuddInitialSettings"
 			android:label="@string/app_name">
 		</activity>
