--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
-    <application android:theme="@style/rhybudd_default" android:icon="@drawable/icon" android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description" android:debuggable="false">
+    <application android:theme="@style/rhybudd_default" android:icon="@drawable/icon" android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description">
         <activity android:name=".RhybuddHome"
                   android:label="@string/app_name"
                   android:uiOptions="splitActionBarWhenNarrow"
@@ -18,19 +18,15 @@
         </activity>
         
         <activity android:name="net.networksaremadeofstring.rhybudd.RhybuddDock"
-                  android:label="Rhybudd Dock"
-                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+                  android:label="Rhybudd Dock">
             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.CAR_DOCK" /> 
 		        <category android:name="android.intent.category.DESK_DOCK" />
 		        <category android:name="android.intent.category.DEFAULT" /> 
             </intent-filter>
         </activity>
         
-        <activity android:name=".RhybuddSettings"
-			android:label="@string/app_name">
-		</activity>
-		
         <activity android:name=".SettingsFragment"
 			android:label="@string/app_name">
 		</activity>
@@ -39,7 +35,13 @@
 			android:label="@string/app_name">
 		</activity>
 		
-		<!--<activity android:name="net.networksaremadeofstring.rhybudd.rhestr"
+		<!--
+		
+		<activity android:name=".RhybuddSettings"
+			android:label="@string/app_name">
+		</activity>
+		
+		<activity android:name="net.networksaremadeofstring.rhybudd.rhestr"
 			android:label="Rhybudd - Zenoss Events List">
 			<intent-filter>
 			     <action android:name="android.intent.action.VIEW" />
@@ -47,12 +49,14 @@
 			     <category android:name="android.intent.category.BROWSABLE" />
 			     <data android:path="/zport/dmd/Events/evconsole*" />
 			 </intent-filter>
-		</activity>-->
+		</activity>
 		
-		<!-- <activity android:name="net.networksaremadeofstring.rhybudd.RhybuddHome"
+		<activity android:name="net.networksaremadeofstring.rhybudd.RhybuddHome"
 			android:label="Rhybudd - Launcher">
 			<meta-data android:name="android.app.default_searchable" android:value="net.networksaremadeofstring.rhybudd.Search" />
-		</activity> -->
+		</activity> 
+		
+		-->
 		
 		<activity android:name="net.networksaremadeofstring.rhybudd.ViewZenossEvent"
 			android:label="Rhybudd - Event Details"
