--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.networksaremadeofstring.rhybudd"
       android:installLocation="auto" android:versionCode="11" android:versionName="2.6">
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="15"/>
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="16"/>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
@@ -11,14 +11,16 @@
                   android:label="@string/app_name"
                   android:uiOptions="splitActionBarWhenNarrow"
                   uiOptions="splitActionBarWhenNarrow"
-                  android:launchMode="singleTop">
+                  android:launchMode="singleTop"
+                  android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data android:name="android.app.default_searchable" android:value="net.networksaremadeofstring.rhybudd.Search" />
         </activity>
         
-        <activity android:name="net.networksaremadeofstring.rhybudd.RhybuddDock"
+        <activity android:name=".RhybuddDock"
                   android:label="Rhybudd Dock">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -88,7 +90,7 @@
 			android:label="Rhybudd - Search">
 		</activity>-->
 
-		<activity android:name="Search" android:label="Search" android:theme="@android:style/Theme.NoTitleBar">
+		<activity android:name="Search" android:label="Search" android:theme="@style/rhybudd_default">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
                 <action android:name="android.intent.action.SEARCH_LONG_PRESS" />
