--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,14 +6,15 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
-    <application android:theme="@style/rhybudd_default" android:icon="@drawable/icon" android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description">
+    <application android:theme="@style/rhybudd_default" android:icon="@drawable/icon" 
+        android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description"
+        android:backupAgent="RhybuddBackupAgent" android:allowBackup="true">
         <activity android:name=".RhybuddHome"
                   android:label="@string/app_name"
                   android:uiOptions="splitActionBarWhenNarrow"
                   uiOptions="splitActionBarWhenNarrow"
                   android:launchMode="singleTop"
-                  android:configChanges="orientation|screenSize"
-                  android:backupAgent="RhybuddBackupAgent" android:allowBackup="true">
+                  android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -143,5 +144,7 @@
 		    <meta-data android:name="android.appwidget.provider"
 		               android:resource="@xml/zenoss_widget_graph" />
 		</receiver>
+		<meta-data android:name="com.google.android.backup.api_key"
+    android:value="AEdPqrEAAAAI_p4Fmym8ZBYQy6zNfaz3mQ-mj-C6zPWIFf3WDA" />
     </application>
 </manifest>
