--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.networksaremadeofstring.rhybudd"
-      android:installLocation="auto" android:versionCode="18" android:versionName="3.3">
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="16"/>
+      android:installLocation="auto" android:versionCode="19" android:versionName="4.0">
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <permission android:name="net.networksaremadeofstring.rhybudd.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="net.networksaremadeofstring.rhybudd.permission.C2D_MESSAGE" />
 
     <application android:theme="@style/rhybudd_default" android:icon="@drawable/icon" 
         android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description"
@@ -12,7 +17,6 @@
         <activity android:name=".RhybuddHome"
                   android:label="@string/app_name"
                   android:uiOptions="splitActionBarWhenNarrow"
-                  uiOptions="splitActionBarWhenNarrow"
                   android:launchMode="singleTop"
                   android:configChanges="orientation|screenSize">
             <intent-filter>
@@ -21,7 +25,20 @@
             </intent-filter>
             <meta-data android:name="android.app.default_searchable" android:value="net.networksaremadeofstring.rhybudd.Search" />
         </activity>
-        
+
+        <receiver
+            android:name="com.google.android.gcm.GCMBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="net.networksaremadeofstring.rhybudd" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".GCMIntentService" />
+
         <activity android:name=".RhybuddDock"
                   android:label="Rhybudd Dock">
             <intent-filter>
@@ -39,30 +56,11 @@
         <activity android:name=".RhybuddInitialSettings"
 			android:label="@string/app_name">
 		</activity>
-		
-		<!--
-		
-		<activity android:name=".RhybuddSettings"
-			android:label="@string/app_name">
-		</activity>
-		
-		<activity android:name="net.networksaremadeofstring.rhybudd.rhestr"
-			android:label="Rhybudd - Zenoss Events List">
-			<intent-filter>
-			     <action android:name="android.intent.action.VIEW" />
-			     <category android:name="android.intent.category.DEFAULT" />
-			     <category android:name="android.intent.category.BROWSABLE" />
-			     <data android:path="/zport/dmd/Events/evconsole*" />
-			 </intent-filter>
-		</activity>
-		
-		<activity android:name="net.networksaremadeofstring.rhybudd.RhybuddHome"
-			android:label="Rhybudd - Launcher">
-			<meta-data android:name="android.app.default_searchable" android:value="net.networksaremadeofstring.rhybudd.Search" />
-		</activity> 
-		
-		-->
-		
+
+        <activity android:name=".FirstRunSettings"
+                  android:label="@string/app_name">
+        </activity>
+
 		<activity android:name="net.networksaremadeofstring.rhybudd.ViewZenossEvent"
 			android:label="Rhybudd - Event Details"
 			android:uiOptions="splitActionBarWhenNarrow">
