--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,6 +60,13 @@
                   android:label="@string/app_name">
         </activity>
 
+        <activity android:name=".AddDeviceActivity"
+                  android:parentActivityName=".DeviceList"
+                  android:label="@string/AddDeviceTitle">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                       android:value=".DeviceList" />
+        </activity>
+
 		<activity android:name="net.networksaremadeofstring.rhybudd.ViewZenossEvent"
 			android:label="Rhybudd - Event Details"
 			android:uiOptions="splitActionBarWhenNarrow">
