--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.NFC" android:required="false"/>
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <permission android:name="net.networksaremadeofstring.rhybudd.permission.C2D_MESSAGE" android:protectionLevel="signature" />
     <uses-permission android:name="net.networksaremadeofstring.rhybudd.permission.C2D_MESSAGE" />
@@ -56,6 +56,10 @@
 		</activity>
 
         <activity android:name=".PushConfigActivity"
+                  android:label="@string/app_name">
+        </activity>
+
+        <activity android:name=".WriteNFCActivity"
                   android:label="@string/app_name">
         </activity>
 
