--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,8 @@
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
     <application android:theme="@style/Theme.Rhybudd_default" android:icon="@drawable/icon"
-        android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description"
+                 android:debuggable="true"
+                 android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description"
         android:backupAgent="RhybuddBackupAgent" android:allowBackup="true">
 
         <activity android:name=".ViewZenossEventsListActivity"
@@ -45,14 +46,14 @@
 
         <service android:name=".GCMIntentService" />
 
-        <activity android:name=".RhybuddDock"  android:label="Rhybudd Dock">
+  <!--      <activity android:name=".RhybuddDock"  android:label="Rhybudd Dock">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.CAR_DOCK" /> 
 		        <category android:name="android.intent.category.DESK_DOCK" />
 		        <category android:name="android.intent.category.DEFAULT" /> 
             </intent-filter>
-        </activity>
+        </activity>-->
         
         <activity android:name=".SettingsFragment"
 			android:label="@string/app_name">
@@ -60,6 +61,12 @@
 
         <activity android:name=".PushConfigActivity"
                   android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <data android:mimeType="application/vnd.net.networksaremadeofstring.rhybudd.push" />
+            </intent-filter>
         </activity>
 
         <activity android:name=".WriteNFCActivity"
@@ -109,6 +116,13 @@
                   android:label="Rhybudd - View Device">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".ViewZenossEventsListActivity" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <data android:mimeType="application/vnd.rhybudd.push" />
+            </intent-filter>
         </activity>
 		
 		<activity android:name="net.networksaremadeofstring.rhybudd.ViewZenossDevice"
