Things from the bugs todo list

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -121,7 +121,8 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT"/>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-                <data android:mimeType="application/vnd.rhybudd.push" />
+                <data android:mimeType="application/vnd.rhybudd.device" />
+                <data android:mimeType="application/vnd.net.networksaremadeofstring.rhybudd.devicepage" />
             </intent-filter>
         </activity>
 		
