--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,8 @@
       package="net.networksaremadeofstring.rhybudd"
       android:installLocation="auto" android:versionCode="24" android:versionName="4.0 (Alpha)">
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.NFC" android:required="false"/>
