--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -199,7 +199,7 @@
         </service>
 
         <service android:name=".RhybuddDream" android:exported="true"
-                 android:icon="@drawable/ic_acknowledged" android:label="Rhybudd Dream" >
+                 android:icon="@drawable/icon" android:label="Rhybudd Dream" >
             <intent-filter>
                 <action android:name="android.service.dreams.DreamService" />
                 <category android:name="android.intent.category.DEFAULT" />
