--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.networksaremadeofstring.rhybudd"
-      android:installLocation="auto" android:versionCode="25" android:versionName="4.0 (Alpha)">
+      android:installLocation="auto" android:versionCode="27" android:versionName="4.0 (Alpha)">
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
@@ -24,7 +24,7 @@
                   android:label="@string/app_name"
                   android:uiOptions="splitActionBarWhenNarrow"
                   android:launchMode="singleTop"
-                  android:configChanges="orientation|screenSize">
+                  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -72,6 +72,10 @@
 
         <activity android:name=".WriteNFCActivity"
                   android:label="@string/app_name">
+        </activity>
+
+        <activity android:name=".DiagnosticActivity"
+                  android:label="Diagnostic Tests">
         </activity>
 
         <activity android:name=".FirstRunSettings"
