--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
-    <application android:theme="@style/Theme.Rhybudd_default" android:icon="@drawable/icon"
+    <application android:theme="@style/Theme.Rhybudd_default" android:icon="@drawable/ic_launcher"
                  android:debuggable="true"
                  android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description"
         android:backupAgent="RhybuddBackupAgent" android:allowBackup="true">
