--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.networksaremadeofstring.rhybudd"
-      android:installLocation="auto" android:versionCode="29" android:versionName="4.0 (RC1)">
+      android:installLocation="auto" android:versionCode="30" android:versionName="4.0">
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
@@ -15,8 +15,8 @@
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
-    <application android:theme="@style/Theme.Rhybudd_default" android:icon="@drawable/ic_launcher"
-                 android:debuggable="true"
+    <application android:theme="@style/Theme.Rhybudd_default"
+                 android:icon="@drawable/ic_launcher"
                  android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description"
         android:backupAgent="RhybuddBackupAgent" android:allowBackup="true">
 
@@ -45,10 +45,11 @@
         </receiver>
 
         <service android:name=".GCMIntentService" />
-        -->
+
         <activity android:name=".SettingsFragment"
 			android:label="@string/app_name">
 		</activity>
+        -->
 
         <activity android:name=".PushConfigActivity"
                   android:label="@string/app_name"
