--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.networksaremadeofstring.rhybudd"
-      android:installLocation="auto" android:versionCode="30" android:versionName="4.0">
+      android:installLocation="auto" android:versionCode="31" android:versionName="4.0.1">
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
@@ -17,8 +17,11 @@
 
     <application android:theme="@style/Theme.Rhybudd_default"
                  android:icon="@drawable/ic_launcher"
-                 android:label="@string/app_name" android:allowClearUserData="true" android:description="@string/Description"
-        android:backupAgent="RhybuddBackupAgent" android:allowBackup="true">
+                 android:label="@string/app_name"
+                 android:allowClearUserData="true"
+                 android:description="@string/Description"
+                 android:backupAgent="RhybuddBackupAgent"
+                 android:allowBackup="true">
 
         <activity android:name=".ViewZenossEventsListActivity"
                   android:label="@string/app_name"
@@ -32,7 +35,6 @@
             <meta-data android:name="android.app.default_searchable" android:value="net.networksaremadeofstring.rhybudd.Search" />
         </activity>
 
-        <!--
         <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
@@ -49,7 +51,6 @@
         <activity android:name=".SettingsFragment"
 			android:label="@string/app_name">
 		</activity>
-        -->
 
         <activity android:name=".PushConfigActivity"
                   android:label="@string/app_name"
@@ -100,7 +101,8 @@
 
         <activity android:name=".ViewZenossDeviceListActivity"
                   android:label="Rhybudd - Infrastructure List">
-            <meta-data android:name="android.app.default_searchable" android:value="net.networksaremadeofstring.rhybudd.Search" />
+            <meta-data android:name="android.app.default_searchable"
+                       android:value="net.networksaremadeofstring.rhybudd.Search" />
         </activity>
 
         <activity android:name=".ViewZenossDeviceActivity"
